force-app/main/default/objects/SSP_AlienSponsor__c/SSP_AlienSponsor__c.object-meta.xml
<CustomObject>
    <description>Used to store member Alien sponsor details</description>
    <label>SSP Alien Sponsor</label>
    <nameField>
        
        <displayFormat>AS - {0000000000}</displayFormat>
        
        <label>SSP Alien Sponsor Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Alien Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>