force-app/main/default/objects/SSP_AlienSponsor__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>This field is used to store first name of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>