force-app/main/default/objects/SSP_AlienSponsor__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>This field is used to store address line 2 of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>