force-app/main/default/objects/SSP_AlienSponsor__c/fields/AlienSponsorVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>AlienSponsorVerificationCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if the alien sponsor data is verified.</description>
    <label>Is Alien Sponsor Verified?</label>
    <type>Checkbox</type>
</CustomField>