force-app/main/default/objects/SSP_AlienSponsor__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to store city of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>