force-app/main/default/objects/SSP_AlienSponsor__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Stores the Country of Alien Sponsor</description>
    <label>CountryCode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>