force-app/main/default/objects/SSP_AlienSponsor__c/fields/Countycode__c.field-meta.xml
<CustomField>
    <fullName>Countycode__c</fullName>
    <description>This field is used to store County Code of sponsor if they are out of household</description>
    <label>County Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>