force-app/main/default/objects/SSP_AlienSponsor__c/fields/DCAlienSponsorId__c.field-meta.xml
<CustomField>
    <fullName>DCAlienSponsorId__c</fullName>
    <description>This field is used to store DC alien sponsor Id</description>
    <externalId>true</externalId>
    <label>DC Alien Sponsor id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>