force-app/main/default/objects/SSP_AlienSponsor__c/fields/IsSponsoredByOrganization__c.field-meta.xml
<CustomField>
    <fullName>IsSponsoredByOrganization__c</fullName>
    <description>This field is used to determine if the person is sponsored by any organization.</description>
    <label>Sponsored By Organization</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>