force-app/main/default/objects/SSP_AlienSponsor__c/fields/PrimaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhoneNumber__c</fullName>
    <description>This field is used to store phone number of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>