force-app/main/default/objects/SSP_AlienSponsor__c/fields/SponsorFirstName__c.field-meta.xml
<CustomField>
    <fullName>SponsorFirstName__c</fullName>
    <description>This field is used to store first name of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>