force-app/main/default/objects/SSP_AlienSponsor__c/fields/SponsorLastName__c.field-meta.xml
<CustomField>
    <fullName>SponsorLastName__c</fullName>
    <description>This field is used to store last name of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>