force-app/main/default/objects/SSP_AlienSponsor__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store member for which the alien sponsor details are captured</description>
    <label>SSP Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipLabel>SSP Alien Sponsors</relationshipLabel>
    <relationshipName>SSP_Alien_Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>