force-app/main/default/objects/SSP_AlienSponsor__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>This field is used to store State Code of sponsor if they are out of household</description>
    <label>State Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>