force-app/main/default/objects/SSP_AlienSponsor__c/fields/Zipcode4__c.field-meta.xml
<CustomField>
    <fullName>Zipcode4__c</fullName>
    <description>This field is used to store zipcode4 of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>