force-app/main/default/objects/SSP_AlienSponsor__c/fields/Zipcode5__c.field-meta.xml
<CustomField>
    <fullName>Zipcode5__c</fullName>
    <description>This field is used to store zipcode5 of sponsor if they are out of household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>